api功能完成
